[package]
name = "cubiomes-project"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = "0.12.1"
iced_aw = "0.9.3"
log = "0.4.21"
pretty_env_logger = "0.5.0"

# c deps
cubiomes = { git = "https://github.com/EnderKill98/cubiomes-rs", rev = "9055f8d" }
libcubiomes-sys = { git = "https://github.com/EnderKill98/cubiomes-rs", rev = "9055f8d" } 
